# gh-branch-guard

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: oss_metrics.yml  python-app.yml  release.yml
src/gh_branch_guard/: __init__.py  cli.py
tests/: test_cli.py
